# AoC-Rust-Template

./: .gitignore  Cargo.toml  README.md
src/: main.rs  scaffold.rs
src/days/: benchmark.rs  mod.rs
src/resources/: README.md
src/resources/template/: DaySubFolderTemplate  DayTemplate
