[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]

itertools = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.22"
chrono = "0.4.38"
regex = "1.11.1"
clap = { version = "4.5.21", features = ["derive"] }




[dev-dependencies]
color-eyre = "0.6.3"
tracing-test = "0.2.4"
test-log = { version = "0.2.14", features = ["trace"]}
pretty_assertions = "1.4.0"
assert_unordered = "0.3.5"